--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -8,19 +8,27 @@
 <div th:replace="layout::header"></div>
 <div th:replace="layout::alerts"></div>
 <main class="container-fluid">
+    <h3>Admin panel</h3>
     <ul class="nav nav-tabs" id="admin-tab" role="tablist">
         <li class="nav-item">
             <a aria-controls="users" aria-selected="true" class="nav-link active" data-toggle="tab" href="#users"
-               id="users-tab" role="tab">Users</a>
+               id="users-tab" role="tab">Users table</a>
         </li>
         <li class="nav-item">
             <a aria-controls="create" aria-selected="false" class="nav-link" data-toggle="tab" href="#create"
-               id="create-tab" role="tab">Create</a>
+               id="create-tab" role="tab">New User</a>
         </li>
     </ul>
     <div class="tab-content" id="admin-tab-content">
-        <div aria-labelledby="users-tab" class="tab-pane fade show active" id="users" role="tabpanel">Users...</div>
-        <div aria-labelledby="profile-tab" class="tab-pane fade" id="create" role="tabpanel">Create...</div>
+        <div aria-labelledby="users-tab" class="tab-pane fade show active" id="users" role="tabpanel">
+            <h6 class="border-left border-right">All users</h6>
+            <div id="users-content">Users...</div>
+        </div>
+        <div aria-labelledby="create-tab" class="tab-pane fade border-left border-right border-bottom" id="create"
+             role="tabpanel">
+            <h6 class="border-bottom">Add new user</h6>
+            <div id="create-content">Create...</div>
+        </div>
     </div>
 </main>
 </body>
