--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,7 +21,7 @@
 
 <header th:fragment="header">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#" th:href="@{/}">WebApp</a>
+        <a class="navbar-brand" href="#" th:href="@{/}">Project name</a>
         <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                 data-target="#navbar" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
@@ -33,13 +33,13 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item" th:unless="${#request.remoteUser}"><a class="nav-link"
-                                                                           th:href="@{/auth/sign-up}">Sign-up</a></li>
+                                                                           th:href="@{/auth/sign-up}">Register</a></li>
                 <li class="nav-item" th:unless="${#request.remoteUser}"><a class="nav-link"
-                                                                           th:href="@{/auth/sign-in}">Sign-in</a></li>
+                                                                           th:href="@{/auth/sign-in}">Login</a></li>
                 <li class="nav-item" th:if="${#request.remoteUser}"><a class="nav-link" th:href="@{/user}"
                                                                        th:text="${#strings.capitalize(#request.remoteUser)}"></a>
                 </li>
-                <li class="nav-item" th:if="${#request.remoteUser}"><a class="nav-link" th:href="@{/auth/sign-out}">Sign-out</a>
+                <li class="nav-item" th:if="${#request.remoteUser}"><a class="nav-link" th:href="@{/auth/sign-out}">Logout</a>
                 </li>
             </ul>
         </div>
