--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -9,19 +9,21 @@
 <main class="container">
     <div class="row justify-content-center">
         <form class="form-signin text-center" th:action="@{/auth/sign-in}" th:method="post">
-            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
             <label class="sr-only" for="username">Username</label>
             <input autofocus class="form-control" id="username" name="username" placeholder="Username" required
                    type="text">
             <label class="sr-only" for="password">Password</label>
             <input class="form-control" id="password" name="password" placeholder="Password" required type="password">
-            <div class="checkbox mb-3">
-                <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                </label>
+            <!--            <div class="checkbox mb-3">-->
+            <!--                <label>-->
+            <!--                    <input type="checkbox" value="remember-me"> Remember me-->
+            <!--                </label>-->
+            <!--            </div>-->
+            <div class="row buttons justify-content-center">
+                <button class="btn btn-md btn-outline-primary" type="submit">login</button>
+                <button class="btn btn-md btn-outline-secondary" type="reset">reset</button>
             </div>
-            <button class="btn btn-lg btn-outline-primary btn-block" type="submit">Sign in</button>
-            <button class="btn btn-lg btn-outline-secondary btn-block" type="reset">Reset</button>
         </form>
     </div>
 </main>
