--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -9,101 +9,119 @@
 <main class="container">
     <h3 class="text-center" th:inline="text">User [[${user.id == null ? 'sign up' :
         #strings.capitalize(user.username)}]]</h3>
-    <div class="row justify-content-center" th:fragment="user-form"
-         th:with="is_admin=${session.current_user != null && session.current_user.isAdmin()}">
-        <div class="col-auto" th:with="url=${is_admin} ? '/admin' : '/user'">
+    <div class="row justify-content-center" th:fragment="user-form-full">
+        <div class="col-12 col-sm-10 col-md-9 col-lg-8 col-xl-6">
+            <th:block th:fragment="user-form"
+                      th:with="is_admin=${session.current_user != null && session.current_user.isAdmin()}">
+                <th:block th:with="url=${is_admin} ? '/admin' : '/user'">
             <form action="#" th:action="@{${url+'/#'}}" th:method="post" th:object="${user}">
-                <table class="table table-sm table-borderless table-user">
-                    <tr th:if="*{id}">
-                        <th><label th:for="id" th:text="${#strings.capitalize('__#{user.id}__')}+':'"></label>
-                        </th>
-                        <td><input th:field="*{id}" th:readonly="*{id != null}"/></td>
-                    </tr>
-                    <tr>
-                        <th><label th:for="username"
-                                   th:text="${#strings.capitalize('__#{user.username}__')}+':'"></label>
-                        </th>
-                        <td><input th:field="*{username}" th:readonly="*{id != null}"/></td>
-                    </tr>
-                    <tr>
-                        <th><label th:for="password"
-                                   th:text="${#strings.capitalize('__#{user.password}__')}+':'"></label>
-                        </th>
-                        <td><input th:field="*{password}"/></td>
-                    </tr>
-                    <th:block th:if="${is_admin}">
-                        <tr>
-                            <th><label th:for="enabled"
-                                       th:text="${#strings.capitalize('__#{user.enabled}__')}+':'"></label>
-                            </th>
-                            <td><input th:field="*{enabled}" type="checkbox"/></td>
-                        </tr>
-                        <tr>
-                            <th><label th:for="accountNonExpired"
-                                       th:text="${#strings.capitalize('__#{user.account_non_expired}__')}+':'"></label>
-                            </th>
-                            <td><input th:field="*{accountNonExpired}" type="checkbox"/></td>
-                        </tr>
-                        <tr>
-                            <th><label th:for="credentialsNonExpired"
-                                       th:text="${#strings.capitalize('__#{user.credential_non_expired}__')+':'}"></label>
-                            </th>
-                            <td><input th:field="*{credentialsNonExpired}" type="checkbox"/></td>
-                        </tr>
-                        <tr>
-                            <th><label th:for="accountNonLocked"
-                                       th:text="${#strings.capitalize('__#{user.account_non_locked}__')}+':'"></label>
-                            </th>
-                            <td><input th:field="*{accountNonLocked}" type="checkbox"/></td>
-                        </tr>
-                        <tr>
-                            <th><label th:for="roles"
-                                       th:text="${#strings.capitalize('__#{user.roles}__')}+':'"></label>
-                            </th>
-                            <td>
-                                <th:block th:each="role,status : ${roleList}">
-                                    <input th:field="*{roles}" th:value="${role}" type="checkbox"/>
-                                    <label th:for="${'role'+status.count}" th:text="${role}"></label>
-                                </th:block>
-                            </td>
-                        </tr>
-                    </th:block>
-                    <tr>
-                        <th><label th:for="firstName"
-                                   th:text="${#strings.capitalize('__#{user.first_name}__')}+':'"></label>
-                        </th>
-                        <td><input onclick="return false" th:field="*{firstName}"/></td>
-                    </tr>
-                    <tr>
-                        <th><label th:for="lastName"
-                                   th:text="${#strings.capitalize('__#{user.last_name}__')}+':'"></label>
-                        </th>
-                        <td><input onclick="return false" th:field="*{lastName}"/></td>
-                    </tr>
-                    <tr>
-                        <th><label th:for="email"
-                                   th:text="${#strings.capitalize('__#{user.email}__')}+':'"></label>
-                        </th>
-                        <td><input onclick="return false" th:field="*{email}"/></td>
-                    </tr>
-                </table>
-                <div class="text-center">
-                    <button class="btn btn-sm btn-outline-primary"
+                <div class="form-group user-form-group form-row" th:if="*{id}">
+                    <label class="col-5 col-form-label" th:for="id"
+                           th:text="${#strings.capitalize('__#{user.id}__')}">#</label>
+                    <div class="col">
+                        <input class="form-control-plaintext" th:field="*{id}" th:readonly="*{id != null}"/>
+                    </div>
+                </div>
+                <div class="form-group user-form-group form-row">
+                    <label class="col-5 col-form-label" th:for="username"
+                           th:text="${#strings.capitalize('__#{user.username}__')}">Username</label>
+                    <div class="col">
+                        <input th:class="*{id} ? 'form-control-plaintext' : 'form-control'" th:field="*{username}"
+                               th:readonly="*{id != null}"/>
+                    </div>
+                </div>
+                <div class="form-group user-form-group form-row">
+                    <label class="col-5 col-form-label" th:for="password"
+                           th:text="${#strings.capitalize('__#{user.password}__')}">Password</label>
+                    <div class="col">
+                        <input class="form-control" th:field="*{password}"/>
+                    </div>
+                </div>
+                <th:block th:if="${is_admin}">
+                    <div class="form-group user-form-group form-row">
+                        <label class="col-5 col-form-label" th:for="enabled"
+                               th:text="${#strings.capitalize('__#{user.enabled}__')}">Enabled</label>
+                        <div class="col form-check form-check-inline">
+                            <input class="form-check-input" th:field="*{enabled}" type="checkbox"/>
+                        </div>
+                    </div>
+                    <div class="form-group user-form-group form-row">
+                        <label class="col-5 col-form-label" th:for="accountNonExpired"
+                               th:text="${#strings.capitalize('__#{user.account_non_expired}__')}">Account non
+                            expired</label>
+                        <div class="col form-check form-check-inline">
+                            <input class="form-check-input" th:field="*{accountNonExpired}" type="checkbox"/>
+                        </div>
+                    </div>
+                    <div class="form-group user-form-group form-row">
+                        <label class="col-5 col-form-label" th:for="credentialsNonExpired"
+                               th:text="${#strings.capitalize('__#{user.credential_non_expired}__')}">Credential non
+                            expired</label>
+                        <div class="col form-check form-check-inline">
+                            <input class="form-check-input" th:field="*{credentialsNonExpired}" type="checkbox"/>
+                        </div>
+                    </div>
+                    <div class="form-group user-form-group form-row">
+                        <label class="col-5 col-form-label" th:for="accountNonLocked"
+                               th:text="${#strings.capitalize('__#{user.account_non_locked}__')}">Account non
+                            locked</label>
+                        <div class="col form-check form-check-inline">
+                            <input class="form-check-input" th:field="*{accountNonLocked}" type="checkbox"/>
+                        </div>
+                    </div>
+                    <div class="form-group user-form-group form-row">
+                        <label class="col-5 col-form-label" th:for="roles"
+                               th:text="${#strings.capitalize('__#{user.roles}__')}">Roles</label>
+                        <div class="col form-check-inline">
+                            <div class="form-check form-check-inline" th:each="role,status : ${roleList}">
+                                <input class="form-check-input" th:field="*{roles}" th:value="${role}" type="checkbox"/>
+                                <label class="form-check-label" th:for="${'role'+status.count}"
+                                       th:text="${role}"></label>
+                            </div>
+                        </div>
+                    </div>
+                </th:block>
+                <div class="form-group user-form-group form-row">
+                    <label class="col-5 col-form-label" th:for="firstName"
+                           th:text="${#strings.capitalize('__#{user.first_name}__')}">First name</label>
+                    <div class="col">
+                        <input class="form-control" onclick="return false" th:field="*{firstName}"/>
+                    </div>
+                </div>
+                <div class="form-group user-form-group form-row">
+                    <label class="col-5 col-form-label" th:for="lastName"
+                           th:text="${#strings.capitalize('__#{user.last_name}__')}">Last name</label>
+                    <div class="col">
+                        <input class="form-control" onclick="return false" th:field="*{lastName}"/>
+                    </div>
+                </div>
+                <div class="form-group user-form-group form-row">
+                    <label class="col-5 col-form-label" th:for="email"
+                           th:text="${#strings.capitalize('__#{user.email}__')}">Email</label>
+                    <div class="col">
+                        <input class="form-control" onclick="return false" th:field="*{email}"/>
+                    </div>
+                </div>
+                <!--/* buttons */-->
+                <div class="row buttons justify-content-center">
+                    <button class="btn btn-md btn-outline-primary"
                             th:formaction="@{${is_admin} ? '/admin/create' : '/auth/sign-up'}"
-                            th:text="${is_admin} ? 'create' : 'sign-up'"
-                            th:type="submit" th:unless="*{id}">sign-up
+                            th:text="${is_admin} ? 'create' : 'register'"
+                            th:type="submit" th:unless="*{id}">register
                     </button>
-                    <button class="btn btn-sm btn-outline-primary" th:formaction="@{${url+'/update'}}"
+                    <button class="btn btn-md btn-outline-primary" th:formaction="@{${url+'/update'}}"
                             th:if="*{id}"
                             th:type="submit">update
                     </button>
-                    <button class="btn btn-sm btn-outline-danger" th:formaction="@{${url+'/delete'}}"
+                    <button class="btn btn-md btn-outline-danger" th:formaction="@{${url+'/delete'}}"
                             th:if="*{id}"
                             th:type="submit">delete
                     </button>
-                    <button class="btn btn-sm btn-outline-secondary" th:type="reset">reset</button>
+                    <button class="btn btn-md btn-outline-secondary" th:type="reset">reset</button>
                 </div>
             </form>
+                </th:block>
+            </th:block>
         </div>
     </div>
 </main>
