--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -12,7 +12,7 @@
         <div class="col-lg">
             <h3 class="text-center">Users</h3>
             <div class=" table-responsive" th:fragment="users">
-                <table class="table table-sm table-bordered table-hover list">
+                <table class="table table-sm table-bordered table-hover users-table">
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">#</th>
@@ -41,10 +41,10 @@
                 <!-- Modal -->
                 <div aria-hidden="true" aria-labelledby="modal-label" class="modal fade" id="user-modal" role="dialog"
                      tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-dialog modal-dialog-centered modal-md" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">User edit</h5>
+                                <strong class="modal-title" id="user-modal-title">User edit</strong>
                                 <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
