--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -4,12 +4,12 @@
     <title>Sign-in page</title>
 </head>
 <body>
-<div th:replace="layout::header"></div>
+<div th:replace="layout::navbar('sign-in')"></div>
 <div th:replace="layout::alerts"></div>
 <main class="container">
     <div class="row justify-content-center">
         <form class="form-signin text-center" th:action="@{/auth/sign-in}" th:method="post">
-            <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
+            <h3 class="h3 mb-3 font-weight-normal">Please login</h3>
             <label class="sr-only" for="username">Username</label>
             <input autofocus class="form-control" id="username" name="username" placeholder="Username" required
                    type="text">
