--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,9 +5,11 @@
     <script th:src="@{/js/admin.js}"></script>
 </head>
 <body>
-<div th:replace="layout::header"></div>
-<div th:replace="layout::alerts"></div>
-<main class="container-fluid">
+<div th:replace="layout::navbar('admin')"></div>
+<div class="row container-fluid">
+    <div th:replace="layout::menu('admin')"></div>
+    <main class="col">
+        <div th:replace="layout::alerts"></div>
     <h3>Admin panel</h3>
     <ul class="nav nav-tabs" id="admin-tab" role="tablist">
         <li class="nav-item">
@@ -31,5 +33,6 @@
         </div>
     </div>
 </main>
+</div>
 </body>
 </html>
