--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
     <title>Error page</title>
 </head>
 <body>
-<div th:replace="layout::header"></div>
+<div th:replace="layout::navbar('error')"></div>
 <!--<div th:replace="layout::alerts"></div>-->
 <main class="container-fluid">
     <div class="error alert alert-danger">
