--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,7 +19,7 @@
     <th:block th:replace="${scripts}"/>
 </head>
 
-<header th:fragment="header">
+<div th:fragment="navbar(active)">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#" th:href="@{/}">Project name</a>
         <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
@@ -27,24 +27,43 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/admin}">Admin</a></li>
-            </ul>
+            <!--            <ul class="navbar-nav mr-auto">-->
+            <!--                <li class="nav-item"  th:classappend="${active == 'home' ? 'active' : _}">-->
+            <!--                    <a class="nav-link" th:href="@{/}">Home</a>-->
+            <!--                </li>-->
+            <!--                <li class="nav-item" th:classappend="${active == 'admin' ? 'active' : _}">-->
+            <!--                    <a class="nav-link" th:href="@{/admin}">Admin</a>-->
+            <!--                </li>-->
+            <!--            </ul>-->
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item" th:unless="${#request.remoteUser}"><a class="nav-link"
-                                                                           th:href="@{/auth/sign-up}">Register</a></li>
-                <li class="nav-item" th:unless="${#request.remoteUser}"><a class="nav-link"
-                                                                           th:href="@{/auth/sign-in}">Login</a></li>
-                <li class="nav-item" th:if="${#request.remoteUser}"><a class="nav-link" th:href="@{/user}"
-                                                                       th:text="${#strings.capitalize(#request.remoteUser)}"></a>
+                <li class="nav-item" th:classappend="${active == 'user'} ? 'active'"
+                    th:unless="${#request.remoteUser}">
+                    <a class="nav-link" th:href="@{/auth/sign-up}">Register</a>
                 </li>
+                <li class="nav-item" th:classappend="${active == 'sign-in'} ? 'active'"
+                    th:unless="${#request.remoteUser}">
+                    <a class="nav-link" th:href="@{/auth/sign-in}">Login</a>
+                </li>
+                <!--                <li class="nav-item" th:classappend="${active == 'user' ? 'active' : _}" th:if="${#request.remoteUser}">-->
+                <!--                    <a class="nav-link" th:href="@{/user}" th:text="${#strings.capitalize(#request.remoteUser)}"></a>-->
+                <!--                </li>-->
                 <li class="nav-item" th:if="${#request.remoteUser}"><a class="nav-link" th:href="@{/auth/sign-out}">Logout</a>
                 </li>
             </ul>
         </div>
     </nav>
-</header>
+</div>
+
+<menu class="col-2" th:fragment="menu(active)" th:if="${#request.remoteUser != null}">
+    <ul class="nav nav-pills flex-column">
+        <li class="nav-item" th:if="${session.current_user != null && session.current_user.isAdmin()}">
+            <a class="nav-link" th:classappend="${active == 'admin'} ? 'active'" th:href="@{/admin}">Admin</a>
+        </li>
+        <li class="nav-item" th:if="${session.current_user != null && session.current_user.isUser()}">
+            <a class="nav-link" th:classappend="${active == 'user'} ? 'active'" th:href="@{/user}">User</a>
+        </li>
+    </ul>
+</menu>
 
 <div class="container text-center" th:fragment="alerts">
     <!--/*@thymesVar id="message" type="String"*/-->
