--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -5,7 +5,7 @@
     <script th:src="@{/js/user.js}"></script>
 </head>
 <body>
-<div th:replace="layout::header"></div>
+<div th:replace="layout::navbar('users')"></div>
 <div th:replace="layout::alerts"></div>
 <main class="container-fluid">
     <div class="row justify-content-center">
@@ -41,10 +41,10 @@
                 <!-- Modal -->
                 <div aria-hidden="true" aria-labelledby="modal-label" class="modal fade" id="user-modal" role="dialog"
                      tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+                    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <strong class="modal-title" id="user-modal-title">User edit</strong>
+                                <strong class="modal-title" id="user-modal-title">Edit user </strong>
                                 <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
