--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -12,8 +12,8 @@
         <div class="col-lg">
             <h3 class="text-center">Users</h3>
             <div class=" table-responsive" th:fragment="users">
-                <table class="table table-sm table-bordered table-hover users-table">
-                    <thead class="thead-dark">
+                <table class="table table-sm table-hover users-table">
+                    <thead>
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col" th:utext="${#strings.capitalize('__#{user.username}__')}">Username</th>
