--- a/src/main/resources/templates/api/users.html
+++ b/src/main/resources/templates/api/users.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout::head(~{::title},~{},~{::script})">
-    <title>Users page</title>
-    <script th:src="@{/js/user.js}"></script>
+    <title>Home page</title>
+    <script src="/js/api/users.js"></script>
 </head>
 <body>
-<div th:replace="layout::navbar('users')"></div>
+<div th:replace="layout::navbar('home')"></div>
 <div th:replace="layout::alerts"></div>
 <main class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-lg">
+        <div class="col">
             <h3 class="text-center">Users</h3>
             <div class=" table-responsive" th:fragment="users">
                 <table class="table table-striped table-hover users-table">
@@ -24,18 +24,18 @@
                         <th scope="col" th:utext="${#strings.capitalize('__#{user.email}__')}">Email</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <th:block th:each="user : ${users}" th:object="${user}">
-                        <tr th:class="user" th:id="*{id}">
-                            <th scope="row" th:text="*{id}"></th>
-                            <td th:text="*{username}"></td>
-                            <td th:text="*{enabled}"></td>
-                            <td th:text="*{#strings.listJoin(roles, ',')}"></td>
-                            <td th:text="*{firstName}"></td>
-                            <td th:text="*{lastName}"></td>
-                            <td th:text="*{email}"></td>
-                        </tr>
-                    </th:block>
+                    <tbody id="user-table-body">
+                    </tbody>
+                    <tbody class="d-none">
+                    <tr class="user" id="user-row">
+                        <th class="id" scope="row">#</th>
+                        <td class="username">username</td>
+                        <td class="enabled">true</td>
+                        <td class="roles"></td>
+                        <td class="firstName">First name</td>
+                        <td class="lastName">Last name</td>
+                        <td class="email">Email</td>
+                    </tr>
                     </tbody>
                 </table>
                 <!-- Modal -->
@@ -50,7 +50,7 @@
                                 </button>
                             </div>
                             <div class="modal-body" id="user-modal-body">
-                                ...
+                                <div th:replace="api/user::user-form('edit')"></div>
                             </div>
                         </div>
                     </div>
