--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -94,21 +94,21 @@
                                 <label class="col-5 col-form-label" th:for="firstName"
                                        th:text="${#strings.capitalize('__#{user.first_name}__')}">First name</label>
                                 <div class="col">
-                                    <input class="form-control" onclick="return false" th:field="*{firstName}"/>
+                                    <input class="form-control" th:field="*{firstName}"/>
                                 </div>
                             </div>
                             <div class="form-group user-form-group form-row">
                                 <label class="col-5 col-form-label" th:for="lastName"
                                        th:text="${#strings.capitalize('__#{user.last_name}__')}">Last name</label>
                                 <div class="col">
-                                    <input class="form-control" onclick="return false" th:field="*{lastName}"/>
+                                    <input class="form-control" th:field="*{lastName}"/>
                                 </div>
                             </div>
                             <div class="form-group user-form-group form-row">
                                 <label class="col-5 col-form-label" th:for="email"
                                        th:text="${#strings.capitalize('__#{user.email}__')}">Email</label>
                                 <div class="col">
-                                    <input class="form-control" onclick="return false" th:field="*{email}"/>
+                                    <input class="form-control" th:field="*{email}"/>
                                 </div>
                             </div>
                             <!--/* buttons */-->
